@@ -32,12 +32,12 @@ libfreefare_la_HEADERS = freefare.h
 libfreefare_ladir = $(includedir)
 
 man_MANS = freefare.3 \
+	   freefare_error.3 \
 	   mad.3 \
 	   mifare_application.3 \
 	   mifare_classic.3 \
 	   mifare_desfire.3 \
 	   mifare_desfire_aid.3 \
-	   mifare_desfire_error.3 \
 	   mifare_desfire_key.3 \
 	   mifare_ultralight.3 \
 	   tlv.3
@@ -48,6 +48,9 @@ linkedman = \
 	    freefare.3 freefare_get_tag_type.3 \
 	    freefare.3 freefare_get_tag_uid.3 \
 	    freefare.3 freefare_get_tags.3 \
+	    freefare_error.3 freefare_strerror.3 \
+	    freefare_error.3 freefare_strerror_r.3 \
+	    freefare_error.3 freefare_perror.3 \
 	    mad.3 mad_free.3 \
 	    mad.3 mad_get_aid.3 \
 	    mad.3 mad_get_card_publisher_sector.3 \
@@ -123,7 +126,6 @@ linkedman = \
 	    mifare_desfire.3 mifare_desfire_write_record_ex.3 \
 	    mifare_desfire_aid.3 mifare_desfire_aid_new.3 \
 	    mifare_desfire_aid.3 mifare_desfire_aid_new_with_mad_aid.3 \
-	    mifare_desfire_error.3 mifare_desfire_error_lookup.3 \
 	    mifare_desfire_key.3 mifare_desfire_3des_key_new.3 \
 	    mifare_desfire_key.3 mifare_desfire_3des_key_new_with_version.3 \
 	    mifare_desfire_key.3 mifare_desfire_des_key_new.3 \
